# gim

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  lexer.h  lexer.l  main.cpp  token.cpp  token.h
test/: 1.lua  2.lua  3.lua  4.lua
